Changing Docker images

--- a/Dockerfile.cli
+++ b/Dockerfile.cli
@@ -1,8 +1,6 @@
-FROM amazeeio/php:7.2-cli-drupal
+#FROM amazeeio/php:7.2-cli-drupal
+FROM amazeeiodevelopment/denpal
 
-COPY composer.json composer.lock /app/
-COPY scripts /app/scripts
-RUN composer install --no-dev
 COPY . /app
 
 # Define where the Drupal Root is located
