--- a/Dockerfile.nginx
+++ b/Dockerfile.nginx
@@ -1,7 +1,8 @@
 ARG CLI_IMAGE
 FROM ${CLI_IMAGE} as cli
 
-FROM amazeeio/nginx-drupal
+#FROM amazeeio/nginx-drupal
+FROM amazeeiodevelopment/denpal_nginx
 
 COPY --from=cli /app /app
 
