Drush cache reload

--- a/.lagoon.yml
+++ b/.lagoon.yml
@@ -23,16 +23,14 @@ tasks:
     #    name: drush cim
     #    command: drush -y cim
     #    service: cli
-    - run:
-        name: drush updb
-        command: drush -y updb
-        service: cli
+    #- run:
+    #    name: drush updb
+    #    command: drush -y updb
+    #    service: cli
     - run:
         name: drush cr
         command: drush -y cr
         service: cli
-
-
 
 environments:
   master:
