--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,6 @@
     "description": "Example of Denpal",
     "type": "project",
     "license": "GPL-2.0+",
-    "minimum-stability": "dev",
     "authors": [
         {
             "name": "Dennis Arslan (dennis@arslan.co.uk)",
@@ -22,7 +21,45 @@
         ]
     },
     "require": {
-	"dennis00/denpal-distro": "dev-master@dev",
-        "drutiny/drutiny": "2.3.*@dev"
+	    "dennis00/denpal-distro": "dev-master@dev",
+      "drutiny/drutiny": "2.3.*@dev"
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
+    "autoload": {
+        "classmap": [
+            "scripts/composer/ScriptHandler.php"
+        ]
+    },
+    "scripts": {
+        "drupal-scaffold": "DrupalComposer\\DrupalScaffold\\Plugin::scaffold",
+        "pre-install-cmd": [
+            "DrupalProject\\composer\\ScriptHandler::checkComposerVersion"
+        ],
+        "pre-update-cmd": [
+            "DrupalProject\\composer\\ScriptHandler::checkComposerVersion"
+        ],
+        "post-install-cmd": [
+            "DrupalProject\\composer\\ScriptHandler::createRequiredFiles"
+        ],
+        "post-update-cmd": [
+            "DrupalProject\\composer\\ScriptHandler::createRequiredFiles"
+        ]
+    },
+    "extra": {
+        "installer-paths": {
+            "web/core": ["type:drupal-core"],
+            "web/libraries/{$name}": ["type:drupal-library"],
+            "web/modules/contrib/{$name}": ["type:drupal-module"],
+            "web/profiles/contrib/{$name}": ["type:drupal-profile"],
+            "web/themes/contrib/{$name}": ["type:drupal-theme"],
+            "drush/contrib/{$name}": ["type:drupal-drush"]
+        },
+        "drupal-scaffold": {
+            "excludes": [
+                "sites/development.services.yml",
+                "sites/example.settings.local.php"
+            ]
+        }
     }
 }
