--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     "require": {
 	    "dennis00/denpal-distro": "dev-master@dev",
       "drutiny/drutiny": "2.3.*@dev",
-      "sensiolabs/security-checker": "v5.0.3"
+      "sensiolabs/security-checker": "dev-master@dev"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
